	* Fixed initialization of frame mutexes
	* Abstracted serial I/O further for Win32 port
	* General tidy of codebase
	* Added HTML documentation
	* Renamed internal ll_* functions to xbee_ll_* to avoid conflicts when statically linking
	* Fixed incorrect xbee_conTx() and xbee_convTx() behavior (was adding a '\0' byte)
	* Fixed bug in AT tx & rx handlers
	* Added support for XBee Series 5 modules

v3.0.6 - 25 Mar 2012
	* Added C++ class
	* Fixed Series 2 addressing issue
	* Enhanced address checking abilities of xbee_conNew()
	* Completely redesigned build system
	* Made a 'defconfig' for FreeBSD
	* Re-implemented threading functions
	* Fixed buggy network interface

v3.0.5 - 09 Mar 2012
	* Added FreeBSD support
	* Renamed xbee_logGet*() -> xbee_log*Get(), and xbee_logSet*() -> xbee_log*Set()
	* Provided C++ support
	* Added xbee_vsetup()
	* Added address validation
	* Added man page documentation
	* Added xbee_conPurge()
	* Added pseudo terminal application
	* Changed to API mode 1 by default (compile time option)
	* Added 'catch-all' connections
	* Changed 'Remote AT' timeouts to 750ms
	* Relicensed to LGPLv3

v3.0.4 - 29 Feb 2012
	* Implemented rx/tx counters
	* Fixed XBee Series 2 data broadcast
	* Fixed internal bugs
	* Added sample code for retrieving library info (commit, build time, etc...)
	* Added 'net' mode, and xbee_netStart()
	* Added xbee_attachEOFCallback() to get alerts when a device error occurs (e.g: FDTI / Network disconnect)
	* Fixed mutex/thread issue
	* Added length checking on transmit functions

v3.0.3 - 21 Feb 2012
	* Fixed xbee_rxHandler() - now obeys allowFrameId flag
	* Exported xbee_pktDataGet()
	* Protected xbee_s1_io_parseInputs() against buffer overrun
	* XBee Series 1 now supports modem status connection types
	* XBee Series 2 support is completed (excluding sensor connection types)
	* Added generic sample code
	* Added more sample code for use with XBee Series 1 modules
	* Added sample code for use with XBee Series 2 modules
