@@ -1,4 +1,5 @@
-<HTML><HEAD><TITLE>Manpage of XBEE_CONRX</TITLE>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<HTML><HEAD><TITLE>Man page of XBEE_CONRX</TITLE>
 </HEAD><BODY>
 <H1>XBEE_CONRX</H1>
 Section: Linux Programmer's Manual (3)<BR>Updated: 04-Mar-2012<BR><A HREF="#index">Index</A>
@@ -11,10 +12,13 @@ xbee_conRx
 <A NAME="lbAC">&nbsp;</A>
 <H2>SYNOPSIS</H2>
 
-<B>#include &lt;<A HREF="file:/usr/include/xbee.h">xbee.h</A>&gt;</B>
+<B>#include &lt;<A HREF="file:///usr/include/xbee.h">xbee.h</A>&gt;</B>
 
 <P>
 <B>xbee_err xbee_conRx(struct xbee_con *</B><I>con</I><B>, struct xbee_pkt **</B><I>retPkt</I><B>, int *</B><I>remainingPackets</I><B>);</B>
+
+<P>
+<B>xbee_err xbee_conRxWait(struct xbee_con *</B><I>con</I><B>, struct xbee_pkt **</B><I>retPkt</I><B>, int *</B><I>remainingPackets</I><B>);</B>
 
 <A NAME="lbAD">&nbsp;</A>
 <H2>DESCRIPTION</H2>
@@ -45,18 +49,25 @@ will return
 will not have been updated - see 
 <B><A HREF="../man3/xbee_conCallbackSet.3.html">xbee_conCallbackSet</A></B>(3).
 
+<P>
+<B>xbee_conRxWait</B>()
+
+is identical to
+<B>xbee_conRx</B>(),
+
+except that it will busy-wait for upto 1 second, checking if there is a packet available.
 <A NAME="lbAE">&nbsp;</A>
 <H3>Return Value</H3>
 
 On success this function will return XBEE_ENONE, otherwise an error number from
-<I>enum xbee_errors</I> (as specified in <I>&lt;<A HREF="file:/usr/include/xbee.h">xbee.h</A>&gt;</I>)
+<I>enum xbee_errors</I> (as specified in <I>&lt;<A HREF="file:///usr/include/xbee.h">xbee.h</A>&gt;</I>)
 
 <A NAME="lbAF">&nbsp;</A>
 <H2>EXAMPLE</H2>
 
 
 <PRE>
-#include &lt;<A HREF="file:/usr/include/xbee.h">xbee.h</A>&gt;
+#include &lt;<A HREF="file:///usr/include/xbee.h">xbee.h</A>&gt;
 
 struct xbee *xbee;
 struct xbee_con *con;
@@ -110,8 +121,8 @@ Attie Grande &lt;<A HREF="mailto:attie@attie.co.uk">attie@attie.co.uk</A>&gt;
 </DL>
 <HR>
 This document was created by
-<A HREF="http://localhost/cgi-bin/man/man2html">man2html</A>,
+<A HREF="/cgi-bin/man/man2html">man2html</A>,
 using the manual pages.<BR>
-Time: 20:32:55 GMT, April 23, 2012
+Time: 21:42:42 GMT, June 11, 2012
 </BODY>
 </HTML>
